--- a/rsc/03_software/02_edgetx/MODELS/model00.yml
+++ b/rsc/03_software/02_edgetx/MODELS/model00.yml
@@ -483,7 +483,7 @@ rfAlarms:
    warning: 45
    critical: 42
 thrTrimSw: 0
-potsWarnMode: WARN_MANUAL
+potsWarnMode: WARN_OFF
 jitterFilter: OFF
 moduleData: 
    0:
@@ -504,7 +504,7 @@ inputNames:
       val: "Thr"
    3:
       val: "Rud"
-potsWarnEnabled: 15
+potsWarnEnabled: 14
 potsWarnPosition: 
    0:
       val: 64
